infra/openshift/monitoring/grafana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:11.2.2
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: provisioning
              mountPath: /etc/grafana/provisioning/datasources
            - name: dashboard-provider
              mountPath: /etc/grafana/provisioning/dashboards
            - name: dashboards
              mountPath: /var/lib/grafana/dashboards
          resources:
            requests:
              memory: 128Mi
              cpu: 50m
            limits:
              memory: 512Mi
              cpu: 300m
      volumes:
        - name: provisioning
          configMap:
            name: grafana-provisioning
            items:
              - key: datasource.yaml
                path: datasource.yaml
        - name: dashboard-provider
          configMap:
            name: grafana-dashboard-provider
            items:
              - key: provider.yaml
                path: provider.yaml
        - name: dashboards
          configMap:
            name: grafana-dashboards
